Abriendo json, mejorando la documentacion y agregando el Nodemon
