# openapi.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.3",
   "info": {
     "title": "Swagger Petstore - OpenAPI 3.0",
-    "description": "Este es un API de Peliculas y Personajes los cuales estan asociados entre si",
+    "description": "Este es un API de Peliculas/Series y Personajes los cuales estan asociados entre si",
     "termsOfService": "http://swagger.io/terms/",
     "contact": {
       "email": "apiteam@swagger.io"
@@ -36,7 +36,7 @@
       "description": "Todo acerca de las peliculas de la api",
       "externalDocs": {
         "description": "Find out more about our store",
-        "url": "http://swagger.io"
+        "url": "http://localhost"
       }
     }
   ],
@@ -46,7 +46,7 @@
         "tags": [
           "characters"
         ],
-        "summary": "Obtencion de token",
+        "summary": "Obtencion del token",
         "description": "Te permite obtener el token necesario para realizar la autentificacion",
         "operationId": "getToken",
         "responses": {
@@ -64,25 +64,14 @@
                 }
               }
             }
-          },
-          "404": {
-            "description": "Token no econtrado"
           }
-        },
-        "security": [
-          {
-            "petstore_auth": [
-              "write:pets",
-              "read:pets"
-            ]
-          }
-        ]
+        }
       }
     },
     "/characters": {
       "get": {
         "tags": [
-          "user"
+          "characters"
         ],
         "summary": "Logs user into the system",
         "description": "",
@@ -141,30 +130,19 @@
           },
           "400": {
             "description": "Invalid username/password supplied"
-          }
+          },
+          "security": [
+            {
+              "bearerAuth": []
+            }
+          ]
         }
       }
     },
-    "/user/logout": {
+    "/characters/{username}": {
       "get": {
         "tags": [
-          "user"
-        ],
-        "summary": "Logs out current logged in user session",
-        "description": "",
-        "operationId": "logoutUser",
-        "parameters": [],
-        "responses": {
-          "default": {
-            "description": "successful operation"
-          }
-        }
-      }
-    },
-    "/user/{username}": {
-      "get": {
-        "tags": [
-          "user"
+          "characters"
         ],
         "summary": "Get user by user name",
         "description": "",
@@ -201,12 +179,17 @@
           },
           "404": {
             "description": "User not found"
-          }
+          },
+          "security": [
+            {
+              "bearerAuth": []
+            }
+          ]
         }
       },
       "put": {
         "tags": [
-          "user"
+          "characters"
         ],
         "summary": "Update user",
         "description": "This can only be done by the logged in user.",
@@ -243,14 +226,19 @@
           }
         },
         "responses": {
-          "default": {
+          "400": {
             "description": "successful operation"
-          }
+          },
+          "security": [
+            {
+              "bearerAuth": []
+            }
+          ]
         }
       },
       "delete": {
         "tags": [
-          "user"
+          "characters"
         ],
         "summary": "Delete user",
         "description": "This can only be done by the logged in user.",
@@ -272,249 +260,293 @@
           },
           "404": {
             "description": "User not found"
+          },
+          "security": [
+            {
+              "bearerAuth": []
+            }
+          ]
+        }
+      }
+    },
+    "/movies": {
+      "get": {
+        "tags": [
+          "movies"
+        ],
+        "summary": "Logs user into the system",
+        "description": "",
+        "operationId": "loginUser",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "query",
+            "description": "The user name for login",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "password",
+            "in": "query",
+            "description": "The password for login in clear text",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
           }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "headers": {
+              "X-Rate-Limit": {
+                "description": "calls per hour allowed by the user",
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              },
+              "X-Expires-After": {
+                "description": "date in UTC when token expires",
+                "schema": {
+                  "type": "string",
+                  "format": "date-time"
+                }
+              }
+            },
+            "content": {
+              "application/xml": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid username/password supplied"
+          },
+          "security": [
+            {
+              "bearerAuth": []
+            }
+          ]
+        }
+      }
+    },
+    "/movies/{id}": {
+      "get": {
+        "tags": [
+          "movies"
+        ],
+        "summary": "Get user by user name",
+        "description": "",
+        "operationId": "getUserByName",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "description": "The name that needs to be fetched. Use user1 for testing. ",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid username supplied"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "security": [
+            {
+              "bearerAuth": []
+            }
+          ]
+        }
+      },
+      "put": {
+        "tags": [
+          "movies"
+        ],
+        "summary": "Update user",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "updateUser",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "description": "name that need to be deleted",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Update an existent user in the store",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
+            },
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "description": "successful operation"
+          },
+          "security": [
+            {
+              "bearerAuth": []
+            }
+          ]
+        }
+      },
+      "delete": {
+        "tags": [
+          "movies"
+        ],
+        "summary": "Delete user",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "deleteUser",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "description": "The name that needs to be deleted",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid username supplied"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "security": [
+            {
+              "bearerAuth": []
+            }
+          ]
         }
       }
     }
   },
   "components": {
+    "responses": {
+      "UnauthorizedError": {
+        "description": "Access token is missing or invalid"
+      }
+    },
     "schemas": {
-      "Order": {
+      "PeliculaSerie": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64",
-            "example": 10
-          },
-          "petId": {
-            "type": "integer",
-            "format": "int64",
-            "example": 198772
-          },
-          "quantity": {
-            "type": "integer",
-            "format": "int32",
-            "example": 7
-          },
-          "shipDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "status": {
-            "type": "string",
-            "description": "Order Status",
-            "example": "approved",
-            "enum": [
-              "placed",
-              "approved",
-              "delivered"
-            ]
-          },
-          "complete": {
-            "type": "boolean"
-          }
-        },
-        "xml": {
-          "name": "order"
-        }
-      },
-      "Customer": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64",
-            "example": 100000
-          },
-          "username": {
-            "type": "string",
-            "example": "fehguy"
-          },
-          "address": {
-            "type": "array",
-            "xml": {
-              "name": "addresses",
-              "wrapped": true
-            },
-            "items": {
-              "$ref": "#/components/schemas/Address"
-            }
-          }
-        },
-        "xml": {
-          "name": "customer"
-        }
-      },
-      "Address": {
-        "type": "object",
-        "properties": {
-          "street": {
-            "type": "string",
-            "example": "437 Lytton"
-          },
-          "city": {
-            "type": "string",
-            "example": "Palo Alto"
-          },
-          "state": {
-            "type": "string",
-            "example": "CA"
-          },
-          "zip": {
-            "type": "string",
-            "example": "94301"
-          }
-        },
-        "xml": {
-          "name": "address"
-        }
-      },
-      "Category": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64",
-            "example": 1
-          },
-          "name": {
-            "type": "string",
-            "example": "Dogs"
-          }
-        },
-        "xml": {
-          "name": "category"
-        }
-      },
-      "User": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64",
-            "example": 10
-          },
-          "username": {
-            "type": "string",
-            "example": "theUser"
-          },
-          "firstName": {
-            "type": "string",
-            "example": "John"
-          },
-          "lastName": {
-            "type": "string",
-            "example": "James"
-          },
-          "email": {
-            "type": "string",
-            "example": "john@email.com"
-          },
-          "password": {
-            "type": "string",
-            "example": "12345"
-          },
-          "phone": {
-            "type": "string",
-            "example": "12345"
-          },
-          "userStatus": {
-            "type": "integer",
-            "description": "User Status",
-            "format": "int32",
-            "example": 1
-          }
-        },
-        "xml": {
-          "name": "user"
-        }
-      },
-      "Tag": {
-        "type": "object",
-        "properties": {
-          "id": {
+          "Id": {
             "type": "integer",
             "format": "int64"
           },
-          "name": {
+          "Imagen": {
             "type": "string"
+          },
+          "Titulo": {
+            "type": "string"
+          },
+          "FechaCreacion": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "Calificacion": {
+            "type": "number",
+            "format": "float"
           }
         },
         "xml": {
-          "name": "tag"
+          "name": "PeliculaSerie"
         }
       },
-      "Pet": {
-        "required": [
-          "name",
-          "photoUrls"
-        ],
+      "Personaje": {
         "type": "object",
         "properties": {
-          "id": {
+          "Id": {
             "type": "integer",
-            "format": "int64",
-            "example": 10
+            "format": "int64"
           },
-          "name": {
-            "type": "string",
-            "example": "doggie"
+          "Imagen": {
+            "type": "string"
           },
-          "category": {
-            "$ref": "#/components/schemas/Category"
+          "Nombre": {
+            "type": "string"
           },
-          "photoUrls": {
-            "type": "array",
-            "xml": {
-              "wrapped": true
-            },
-            "items": {
-              "type": "string",
-              "xml": {
-                "name": "photoUrl"
-              }
-            }
+          "Edad": {
+            "type": "integer",
+            "format": "int64"
           },
-          "tags": {
-            "type": "array",
-            "xml": {
-              "wrapped": true
-            },
-            "items": {
-              "$ref": "#/components/schemas/Tag"
-            }
+          "Peso": {
+            "type": "integer",
+            "format": "int64"
           },
-          "status": {
-            "type": "string",
-            "description": "pet status in the store",
-            "enum": [
-              "available",
-              "pending",
-              "sold"
-            ]
+          "Historia": {
+            "type": "string"
           }
         },
         "xml": {
-          "name": "pet"
+          "name": "Personaje"
         }
       },
-      "ApiResponse": {
+      "PersonajeXPelicula": {
         "type": "object",
         "properties": {
-          "code": {
+          "IdPersonaje": {
             "type": "integer",
-            "format": "int32"
+            "format": "int64"
           },
-          "type": {
-            "type": "string"
-          },
-          "message": {
-            "type": "string"
+          "IdPeliculaSerie": {
+            "type": "integer",
+            "format": "int64"
           }
         },
         "xml": {
-          "name": "##default"
+          "name": "PersonajeXPelicula"
         }
       }
     },
